<resources>
    <string name="app_name">Smart Groceries</string>

    <string name="signupbtn"><u>Sign Up</u></string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="title_activity_vendor_home">VendorHomeActivity</string>
    <string name="title_orders">Orders</string>
    <string name="title_inventory">Inventory</string>

    <string-array name="units">
        <item>Gram</item>
        <item>kg</item>
        <item>mg</item>
        <item>ltr</item>
        <item>ml</item>
        <item>Pack</item>
        <item>Units</item>
    </string-array>

</resources>
