<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.my.smartgroceries.CustomerDashboard.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_customer_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.my.smartgroceries.CustomerDashboard.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_customer_cart" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.my.smartgroceries.CustomerDashboard.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_customer_account" />
</navigation>